--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Você decide o futuro da IA</title>
+    <title> Gastronomia </title>
 </head>
 
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro da IA</h1>
+        <h1>Gastronomia</h1>
         <div class="tela-inicial">
-            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
-                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
-                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
-                quem foi que escreveu ou falou o que.
-                Em meio a esse caos de identidade, uma missão surgiu.
-                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
-                possibilidades que o futuro nos reserva.
-                O mundo nunca mais será o mesmo.
+            <p>A gastronomia é a arte e a ciência de preparar e apreciar alimentos e bebidas. 
+                Envolve não apenas a cozinha, mas também o estudo da cultura alimentar, 
+                dos ingredientes, das técnicas de preparo e dos processos de culinária.
+                 A gastronomia explora a relação entre comida e identidade cultural, 
+                 tradição e inovação, e abrange desde a culinária local e regional até a 
+                 alta gastronomia e tendências modernas.
+                <br>
+                No âmbito da gastronomia, destacam-se aspectos como a escolha de ingredientes, 
+                a aplicação de técnicas culinárias, a apresentação dos pratos e o impacto das 
+                práticas alimentares na saúde e no meio ambiente. Além disso, a gastronomia é 
+                uma forma de expressão artística e cultural, refletindo as histórias, as influências
+                 e os valores das sociedades.
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
